# bootcamp_python

./: .gitignore  pyproject.toml
aula_1/: exemplo_00.py
aula_2/: exercicios.py
aula_4/: exercicios.py
